[workspace]
resolver = "2"
members = [
  "crates/serde-ini-spanned",
  "crates/bumpversion",
  "crates/bumpversion-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["romnn <contact@romnn.com>"]
description = "bump semver version in your project"
license-file = "LICENSE"
documentation = "https://docs.rs/cargo-bumpversion"
homepage = "https://github.com/romnn/bumpversion"
repository = "https://github.com/romnn/bumpversion"
readme = "README.md"
categories = [
  "command-line-utilities",
]
keywords = [
  "semver",
  "bumpversion",
  "bump2version",
]
exclude = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[workspace.dependencies]
thiserror = "2"
color-eyre = "0"
tracing = "0"
once_cell = "1"
chrono = "0"
bumpversion = { path = "./crates/bumpversion" }
serde-ini-spanned = { path = "./crates/serde-ini-spanned" }
