[workspace]
resolver = "2"
members = [
  "crates/serde-ini-spanned",
  "crates/bumpversion",
  "crates/bumpversion-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["romnn <contact@romnn.com>"]
description = "bump semver version in your project"
license-file = "LICENSE"
readme = "README.md"
documentation = "https://docs.rs/cargo-bumpversion"
homepage = "https://github.com/romnn/bumpversion"
repository = "https://github.com/romnn/bumpversion"
categories = [
  "command-line-utilities",
]
keywords = [
  "semver",
  "bumpversion",
  "bump2version",
]
exclude = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[workspace.dependencies]
thiserror = "2"
color-eyre = "0"
tracing = "0"
chrono = "0"
tokio = { version = "1", features = ["full"] }
futures = "0"
similar-asserts = "1"

bumpversion = { path = "./crates/bumpversion" }
serde-ini-spanned = { path = "./crates/serde-ini-spanned" }
