[workspace]
resolver = "2"
members = [
  "crates/bumpversion",
  "crates/bumpversion-cli",
]

[workspace.package]
version = "0.0.2"
edition = "2024"
authors = ["romnn <contact@romnn.com>"]
description = "Update all version strings in your project and optionally commit and tag the changes"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/romnn/bumpversion"
repository = "https://github.com/romnn/bumpversion"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"

[workspace.dependencies]
thiserror = "2"
tracing = "0"

# async runtime
tokio = { version = "1", features = ["full"] }
futures = "0"

# testing
color-eyre = "0"
similar-asserts = "1"
