[package]
name = "bumpversion"
version = "0.1.0"
edition = "2021"
publish = true
authors = ["romnn <contact@romnn.com>"]
description = "bump semver version in your project"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/romnn/bumpversion"
repository = "https://github.com/romnn/bumpversion"
categories = [
  "command-line-utilities",
]
keywords = [
  "semver",
  "bumpversion",
  "bump2version",
]

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["native"]
all = ["native", "git2", "git-repository"]
native = []
git2 = ["dep:git2"]
git-repository = ["dep:git-repository"]

[dependencies]
git-repository = { version = "0.23", optional = true }
git2 = { version = "0.15", optional = true }
tempdir = "0.3"
thiserror = "1"
regex = "1"
lazy_static = "1"
configparser = "3"
derive_builder = "0"
# syn = "1.0"
# quote = "1.0"
# anyhow = "1"
# serde = "1"
# toml = "0.5"

[dev-dependencies]
color-eyre = "0"
rand = "0.8"
pretty_assertions = "1.3"
