[package]
name = "bumpversion"
version = "0.1.0"
edition = "2021"
publish = true
authors = ["romnn <contact@romnn.com>"]
description = "bump semver version in your project"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/romnn/bumpversion"
repository = "https://github.com/romnn/bumpversion"
categories = [
  "command-line-utilities",
]
keywords = [
  "semver",
  "bumpversion",
  "bump2version",
]

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.cargo-feature-combinations]
denylist = ["default", "full"]

[features]
default = ["native"]
full = ["native", "git2", "git-repository"]
native = []

git2 = ["dep:git2"]
git-repository = ["dep:git-repository"]

[dependencies]
tempdir = "0"
thiserror = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
lazy_static = "1"
# configparser = "3"
# derive_builder = "0"
color-eyre.workspace = true
# syn = "1.0"
# quote = "1.0"
# anyhow = "1"
# serde = "1"
indexmap = { version = "2", features = ["serde"] }
# serde-tuple-vec-map = "1"
serde_ini = { path = "../crates/serde-ini" }
toml = "0"

# optional
git-repository = { version = "0", optional = true }
git2 = { version = "0", optional = true }

[dev-dependencies]
color-eyre.workspace = true
rand = "0"
similar-asserts = "1"
