[package]
name = "bumpversion"
version = "0.1.0"
edition = "2021"
publish = true
authors = ["romnn <contact@romnn.com>"]
description = "bump semver version in your project"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/romnn/bumpversion"
repository = "https://github.com/romnn/bumpversion"
categories = [
  "command-line-utilities",
]
keywords = [
  "semver",
  "bumpversion",
  "bump2version",
]

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.cargo-feature-combinations]
denylist = ["default", "full"]

[features]
default = []
# full = ["git2", "git-repository"]
# git2 = ["dep:git2"]
# git-repository = ["dep:git-repository"]

[dependencies]
color-eyre.workspace = true
thiserror.workspace = true
tracing.workspace = true

# todo: remove tempdir (tests only??
tempdir = "0"

# regex
regex = "1"
lazy-regex = "3"
# parking_lot = "0"

# parse config files
serde = { version = "1", features = ["derive"] }
configparser = "3"
# serde_ini = { path = "../crates/serde-ini" }
serde-ini-spanned = { path = "../crates/serde-ini-spanned" }
toml-span = { version = "0", features = ["reporting", "serde"] }
indexmap = { version = "2", features = ["serde"] }

# diagnostics
codespan-reporting = "0"
unindent = "0"

# optional: git bindings
# git-repository = { version = "0", optional = true }
# git2 = { version = "0", optional = true }

[dev-dependencies]
color-eyre.workspace = true
rand = "0"
indoc = "2"
similar-asserts = "1"
