[bumpversion]
current_version = 0.1.8
commit = True
tag = True
message = DO NOT BUMP VERSIONS WITH THIS FILE

[bumpversion:glob:*.txt]
[bumpversion:glob:**/*.txt]

[bumpversion:file:setup.py]
search = version = "{current_version}"
replace = version = "{new_version}"

[bumpversion:file:favico/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file_with_dotted_version:file2]
search = dots: {current_version}
replace = dots: {new_version}

[bumpversion:file_with_dotted_version:file2]
search = dashes: {current_version}
replace = dashes: {new_version}
parse = (?P<major>\d+)-(?P<minor>\d+)-(?P<patch>\d+)
serialize = {major}-{minor}-{patch}

[bdist_wheel]
universal = 1

[metadata]
description-file = README.rst

[flake8]
exclude = docs
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4
