[package]
name = "bumpversion-cli"
license-file = "../../LICENSE"
readme = "../../README.md"
default-run = "bumpversion"
exclude = []
publish = false

version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[[bin]]
name = "bumpversion"
path = "src/bumpversion.rs"

# [[bin]]
# name = "cargo-bumpversion"
# path = "src/cargo_bumpversion.rs"

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[dependencies]
color-eyre.workspace = true

# cli
clap = { version = "4", features = ["derive", "env", "color"] }
# clap-verbosity-flag = "3"

# logging
tracing.workspace = true
tracing-subscriber = { version = "0", features = ["json", "env-filter"] }

# colors and diagnostics
colored = "2"
termcolor = "1"
codespan-reporting = "0"

# async runtime 
tokio.workspace = true
futures.workspace = true

bumpversion.workspace = true

# [dev-dependencies]
# similar-asserts.workspace = true
