[package]
name = "bumpversion"
license-file = "../../LICENSE"
readme = "../../README.md"
publish = true

version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.cargo-feature-combinations]
denylist = ["default", "full"]

[features]
default = []

[dependencies]
color-eyre.workspace = true
thiserror.workspace = true
tracing.workspace = true
once_cell.workspace = true

# todo: remove tempdir (tests only??
tempdir = "0"

# resolve glob patterns
glob = "0"

# show diffs of file changes
similar-asserts = "1"

# time for env context
chrono.workspace = true

# commands
shlex = "1"
async-process = "2"

# parse python f-strings
winnow = "0.6"

# regex
regex = "1"

# parse config files
serde = { version = "1", features = ["derive"] }
serde-ini-spanned.workspace = true
toml-span = { version = "0", features = ["reporting", "serde"] }
toml_edit = "0"
indexmap = { version = "2", features = ["serde"] }

# diagnostics
codespan-reporting = "0"
unindent = "0"

# async runtime 
tokio.workspace = true
futures.workspace = true

# removed
# configparser = "3"
# serde_ini = { path = "../crates/serde-ini" }
# serde-ini-spanned = { path = "../crates/serde-ini-spanned" }
# aho-corasick = "1"
# fancy-regex = "0"
# lazy-regex = "3"
# parking_lot = "0"


[dev-dependencies]
color-eyre.workspace = true
rand = "0"
indoc = "2"
regex = "1"
similar-asserts = "1"
