[package]
name = "bumpversion"
license-file = "../../LICENSE"
readme = "../../README.md"
publish = true

version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.cargo-feature-combinations]
denylist = ["default", "full"]

[features]
default = []

[dependencies]
thiserror.workspace = true
tracing.workspace = true

# temporary file for git messages
tempfile = "3"

# resolve glob patterns
glob = "0"

# show diffs of file changes
similar-asserts = "1"

# time for env context
chrono.workspace = true

# commands
shlex = "^1.3"
async-process = "2"

# parse python f-strings
winnow = "0.6"

# regex
regex = "^1.11"

# parse config files
serde = { version = "1", features = ["derive"] }
serde-ini-spanned.workspace = true
toml-span = { version = "0", features = ["reporting", "serde"] }
toml_edit = "0"
indexmap = { version = "2", features = ["serde"] }

# diagnostics
colored = "2"
codespan-reporting = "0"
unindent = "0"

# async runtime 
tokio.workspace = true
futures.workspace = true

[dev-dependencies]
color-eyre.workspace = true
rand = "0"
indoc = "2"
regex = "^1.11"
similar-asserts = "1"
