[package]
name = "bumpversion"
license-file = "../../LICENSE"
readme = "../../README.md"
documentation = "https://docs.rs/bumpversion"
publish = true

version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories = [
  "command-line-utilities",
]
keywords = [
  "semver",
  "bumpversion",
  "bump2version",
]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
thiserror.workspace = true
tracing.workspace = true
parking_lot = "0"

# temporary file for git messages
tempfile = "3"

# resolve glob patterns
glob = "0"

# show diffs of file changes
similar-asserts = "1"

# time for env context
chrono = "^0.4.40"

# commands
shlex = "^1.3"
async-process = "2"

# parse python f-strings
winnow = "0.7"

# regex
regex = "^1.11"

# parse config files
serde = { version = "1", features = ["derive"] }
serde-ini-spanned = "0"
toml-span = { version = "0", features = ["reporting", "serde"] }
toml_edit = "0"
indexmap = { version = "2", features = ["serde"] }

# diagnostics
colored = "3"
codespan-reporting = "0"
unindent = "0"

# async runtime 
tokio.workspace = true
futures.workspace = true

[dev-dependencies]
color-eyre.workspace = true
similar-asserts.workspace = true

rand = "0"
indoc = "2"
regex = "^1.11"
