[package]
name = "python-fstring"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true

[features]
default = ["pest"]
pest = ["dep:pest", "dep:pest_derive"]

[dependencies]
thiserror.workspace = true
color-eyre.workspace = true

# rustpython-parser = "0"

nom = "8"

# optional: winnow parser
winnow = "0.7"

# optional: pest parser
pest = { version = "2", optional = true }
pest_derive = { version = "2", optional = true }

[dev-dependencies]
color-eyre.workspace = true
rand = "0"
indoc = "2"
similar-asserts = "1"

# test pest
pest-test = "0"
pest-test-gen = "0"
# pest-test = { version = "0", optional = true }
# pest-test-gen = { version = "0", optional = true }
