[package]
name = "serde-ini-spanned"
version = "0.2.0"
publish = true
description = "Windows INI file {de,}serialization"
edition.workspace = true
authors.workspace = true
license-file.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
exclude.workspace = true
keywords = [
  "ini",
  "cfg",
  "serde"
]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
serde = "1"
thiserror.workspace = true
once_cell.workspace = true
indexmap = { version = "2", features = ["serde"] }

# manual parsing
aho-corasick = "1"

# diagnostics
codespan-reporting = "0"
unindent = "0"

# # optional: pest parser
# pest = "2"
# pest_derive = "2"

# # optional: nom parser
# nom = "7"

[dev-dependencies]
color-eyre = "0"
similar-asserts = "1"
indoc = "2"
lazy_static = "1"

# pest-test = "0"
# pest-test-gen = "0"
