[package]
name = "serde-ini-spanned"
version = "0.2.0"
description = "INI configuration file deserialization similar to Python's configparser"
publish = true

edition.workspace = true
authors.workspace = true
license-file.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
exclude.workspace = true
keywords = [
  "ini",
  "cfg",
  "serde"
]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
serde = "1"
thiserror.workspace = true
indexmap = { version = "2", features = ["serde"] }

# manual parsing
aho-corasick = "1"

# diagnostics
codespan-reporting = "0"

# # optional: pest parser
# pest = "2"
# pest_derive = "2"
# # optional: nom parser
# nom = "7"

[dev-dependencies]
color-eyre.workspace = true
similar-asserts.workspace = true
indoc = "2"
unindent = "0"

# pest-test = "0"
# pest-test-gen = "0"
