[package]
name = "serde_ini"
version = "0.2.0"
edition = "2021"
publish = false
authors = ["romnn <contact@romnn.com>"]
description = "Windows INI file {de,}serialization"
keywords = [
  "ini",
  "cfg",
  "serde"
]
documentation = "http://arcnmx.github.io/serde-ini/serde_ini"
repository = "https://github.com/arcnmx/serde-ini"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
serde = "1"
thiserror = "1"
# result = "^1.0.0"
# void = "^1.0.2"

# [dev-dependencies]
# serde_derive = "^1.0.0"
